# fyr

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md
.github/workflows/: ci.yml  docs-site.yml  pr-validation.yml  release-dev.yml  release.yml
crates/downloader/: Cargo.toml
crates/downloader/src/: lib.rs  manager.rs  router.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: config.rs  lib.rs  types.rs  validation.rs
crates/nexus-downloader/: Cargo.toml
crates/nexus-downloader/src/: download.rs  lib.rs  manager.rs  router.rs
crates/nexus-server/: Cargo.toml
crates/nexus-server/src/: handlers.rs  main.rs  state.rs
crates/nexus-ui/: Cargo.toml
crates/nexus-ui/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  handlers.rs  main.rs  settings.rs  state.rs  zim_reader.rs
crates/server/src/ai/: error.rs  loader.rs  manager.rs  mod.rs  types.rs
crates/types/: Cargo.toml
crates/types/src/: config.rs  lib.rs  settings.rs  types.rs  validation.rs
crates/ui/: Cargo.toml
crates/ui/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
crates/ui/frontend/src/: App.vue  main.js
crates/ui/frontend/src/modules/reader/: useEpubReader.js  useMarkdownReader.js  usePdfReader.js  useReaderFactory.js  useUnifiedReader.js  useZimReader.js
crates/ui/frontend/src/pages/: Assistant.vue  Books.vue  ContentManager.vue  Home.vue  Login.vue  Maps.vue  Settings.vue
crates/ui/frontend/src/services/: api.js  auth.js  eventBus.js  location.js  locationClock.js  settings.js
crates/ui/src/: lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTENT_DOWNLOADER.md  DATA_FORMATS.md  DEPLOYMENT.md  DEVELOPER_DEPLOYMENT.md  DEV_SETUP.md  PMTILES_GENERATION.md  RADIO_PLANNING.md  WIKIPEDIA_SUPPORT.md
docs-site/: CNAME  _config.yml  index.html  index.md  robots.txt  sitemap.xml
docs-site/_posts/: 2024-01-01-welcome.md
docs/developer/: DEVELOPER_MANUAL.md
docs/user/: USER_MANUAL.md
public/data/: curated-content.json
public/data/books/: developer-manual.epub  user-manual.epub
public/kiwix-static/: KIWIX_SOURCE_MANIFEST.json  LICENSE-GPLv3.txt  THIRD_PARTY_NOTICES.txt  manifest.json  service-worker.js
public/kiwix-static/www/js/: app.js
public/kiwix-static/www/js/lib/: zimArchive.js
