[workspace]
members = [
    "crates/types",
    "crates/server",
    "crates/downloader",
    "crates/ui",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Fyr Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["stream"] }
walkdir = "2"
toml = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
