[package]
name = "nexus-downloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
walkdir.workspace = true
uuid.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
