[package]
name = "nexus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-downloader = { path = "../nexus-downloader" }

tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
anyhow.workspace = true
uuid.workspace = true
futures.workspace = true

chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "nexus"
path = "src/main.rs"
