[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
types = { path = "../types" }
downloader = { path = "../downloader" }

tokio.workspace = true
axum = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["set-header"] }
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
futures.workspace = true
tokio-stream.workspace = true
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers = "0.22"

chrono = { version = "0.4", features = ["serde"] }
zim = "0.4"

[[bin]]
name = "fyr"
path = "src/main.rs"
